<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/nav_group_main">

        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_chart"
            android:title="@string/str_overview" />

        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_person"
            android:title="@string/str_player_info" />
        <item
            android:id="@+id/nav_playerslist"
            android:icon="@drawable/ic_playerslist"
            android:title="@string/str_playerslist" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_filled"
            android:title="@string/str_information" />

        <item
            android:id="@+id/nav_changelog"
            android:icon="@drawable/ic_clipboard"
            android:title="@string/str_changelog" />

    </group>

    <group android:checkableBehavior="single" android:id="@+id/nav_group_share">
        <item android:title="@string/str_communicate">
            <menu>
                <item
                    android:id="@+id/nav_website"
                    android:icon="@drawable/ic_globe"
                    android:title="@string/str_website" />
                <item
                    android:id="@+id/nav_forum"
                    android:icon="@drawable/ic_comment"
                    android:title="@string/str_forum" />
                <item
                    android:id="@+id/nav_twitter"
                    android:icon="@drawable/ic_chat_bubble"
                    android:title="@string/str_twitter" />
                <item
                    android:id="@+id/nav_facebook"
                    android:icon="@drawable/ic_rss"
                    android:title="@string/str_facebook" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/nav_group_misc">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_imprint"
            android:icon="@drawable/ic_bank"
            android:title="@string/str_imprint" />
    </group>
</menu>
