<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/str_apiSettings">

        <EditTextPreference
            android:id="@+id/pref_api_token"
            android:icon="@drawable/ic_lock_open"
            android:inputType="textPassword"
            android:key="api_token"
            android:summary="Player API Token"
            android:title="@string/str_api_token" />
        <Preference
            android:id="@+id/pref_scan_code"
            android:icon="@drawable/ic_linked_camera"
            android:key="scan_code"
            android:title="@string/str_scan" />
        <Preference
            android:id="@+id/pref_scan_code_help"
            android:icon="@drawable/ic_info_filled"
            android:key="scan_code_help"
            android:title="@string/str_helpScan" />
        <EditTextPreference
            android:id="@+id/pref_days_maintenance"
            android:icon="@drawable/ic_location_city"
            android:key="days_maintenance"
            android:title="@string/str_days_maintenance"
            android:defaultValue=""/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/str_vehiclesListSettings">

        <SwitchPreference
            android:id="@+id/pref_vehicleList_sold"
            android:key="pref_vehicleList_sold"
            android:summaryOff="@string/str_dont_show"
            android:summaryOn="@string/str_show"
            android:title="@string/str_vehicleList_sold" />
            />
        <SwitchPreference
            android:id="@+id/pref_vehicleList_destroyed"
            android:key="pref_vehicleList_destroyed"
            android:summaryOff="@string/str_dont_show"
            android:summaryOn="@string/str_show"
            android:title="@string/str_vehicleList_destroyed" />
        />
        <SwitchPreference
            android:id="@+id/pref_vehicleList_impounded"
            android:key="pref_vehicleList_impounded"
            android:summaryOff="@string/str_dont_show"
            android:summaryOn="@string/str_show"
            android:title="@string/str_vehicleList_impound" />
        />

    </PreferenceCategory>

</PreferenceScreen>