<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_changelog"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/str_changelog" />

        <item
            android:id="@+id/nav_imprint"
            android:icon="@drawable/ic_bank_black_24dp"
            android:title="@string/str_imprint" />
    </group>

    <item android:title="@string/str_communicate">
        <menu>
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_public_black_24dp"
                android:title="@string/str_website" />
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
                android:title="@string/str_twitter" />
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_rss_feed_black_24dp"
                android:title="@string/str_facebook" />
        </menu>
    </item>

</menu>
