<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor">

    <ImageView
        android:id="@+id/iv_player_bank"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/str_bank"
        android:scaleType="fitXY"
        android:src="@drawable/ic_bank"
        android:tint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_player_cash"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/str_cash"
        android:scaleType="fitXY"
        android:src="@drawable/ic_money"
        android:tint="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_player_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_null"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_player_bank"
        app:layout_constraintEnd_toStartOf="@+id/iv_player_bank"
        app:layout_constraintTop_toTopOf="@+id/iv_player_bank" />

    <TextView
        android:id="@+id/tv_player_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_null"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_player_cash"
        app:layout_constraintStart_toEndOf="@+id/iv_player_cash"
        app:layout_constraintTop_toTopOf="@+id/iv_player_cash" />

    <TextView
        android:id="@+id/lbl_player_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/str_level"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_player_bank" />

    <ProgressBar
        android:id="@+id/pb_player_level"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:progress="50"
        android:progressTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_player_level" />

    <TextView
        android:id="@+id/tv_player_level_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/str_null"
        android:textColor="@color/primaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/pb_player_level"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_player_level_cur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/str_null"
        android:textColor="@color/primaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/pb_player_level"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>